# CircleDetector

./: CMakeLists.txt  README.md
inc/base/: Detector.hpp  Label.hpp
inc/ui/: MainWindow.hpp  ParametersDialog.hpp
src/: main.cpp
src/base/: Detector.cpp  Label.cpp
src/ui/: MainWindow.cpp  MainWindow.ui  ParametersDialog.cpp  ParametersDialog.ui  ui_MainWindow.py
